# auto-retail-aic2022

./: .gitignore  README.md  constants.py  main.py  manual_labels.txt  pyproject.toml  requirements.txt  submission_track4.txt  submission_track4_0.6score.txt  submission_track4_0.7score.txt  submission_track4_vertical_rois_good.txt
ByteTrack/yolox/tracker/: byte_tracker.py
ByteTrack/yolox/utils/: visualize.py
base/: base_data_loader.py  base_model.py
data_loader/: data_loaders.py
dataset/: track4_dataset.py
logger/: logger.py  visualization.py
model/: model.py
tools/: create_yolo_dataset.py  find_contours.py
utils/: augmentation.py  metrics.py  plots.py  util.py
yolov5/: .gitignore  train.py
yolov5/data/hyps/: hyp.finetune-aic2022.yaml  hyp.scratch-aic2022.yaml
yolov5/utils/: augmentations.py  datasets.py
