[tool.poetry]
name = "auto-retail-aic2022"
version = "0.1.0"
description = ""
authors = ["duytue <tue@vietkite.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pandas = "^1.4.1"
torch = "^1.11.0"
opencv-python = "^4.5.5"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
