[tool.poetry]
name = "auto-retail-aic2022"
version = "0.1.0"
description = ""
authors = ["duytue <tue@vietkite.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pandas = "^1.4.1"
torch = "1.10.0"
opencv-python = "^4.5.5"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"
wandb = "^0.12.11"
tqdm = "^4.63.0"
torchvision = "0.11.1"
tensorboard = "^2.8.0"
imutils = "^0.5.4"
loguru = "^0.6.0"
thop = "^0.0.31"
pycocotools = "^2.0.4"
tabulate = "^0.8.9"
lap = "^0.4.0"
ninja = "^1.10.2"
filterpy = "^1.4.5"
Cython = "^0.29.28"
cython-bbox = "^0.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
